--- a/src/frontend/pages/SiloDescriptionPage/siloDescription.module.css
+++ b/src/frontend/pages/SiloDescriptionPage/siloDescription.module.css
@@ -2,24 +2,26 @@
 body, html {
     margin: 0;
     padding: 0;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 .container {
     position: relative;
-    width: 100vw;
+    width: 100%; /* Changed from 100vw to 100% */
     height: 100vh;
     background-color: #1a1a1a;
     overflow: hidden;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 70px;
-    overflow: hidden;
+    padding: 0 5%; /* Changed from fixed pixels to percentage */
+    box-sizing: border-box; /* Include padding in width calculation */
 }
 
 .leftContent {
     z-index: 2;
     margin-top: -10vh; /* Move content up */
+    max-width: 50%; /* Ensure left content doesn't overflow */
 }
 
 .rightContent {
@@ -29,8 +31,7 @@ body, html {
     z-index: 2;
     width: 45%; /* Slightly wider to accommodate left shift */
     margin-top: -5vh; /* Move content up */
-    padding-left: 0px;
-    padding-right: 40px; /* Shift content to the left */
+    padding-left: 0;
 }
 
 .testTitle {
@@ -38,11 +39,12 @@ body, html {
 }
 
 .aboutHeader {
-    font-size: 120px;
+    font-size: 8vw; /* Responsive font size */
     font-weight: bold;
     color: #ffffff;
-    letter-spacing: 70px;
+    letter-spacing: 2vw; /* Responsive letter spacing */
     line-height: 1.2;
+    white-space: nowrap; /* Prevent wrapping */
 }
 
 .helloLine, .worldLine {
@@ -155,4 +157,5 @@ body, html {
     width: 100%;
     height: 100%;
     z-index: 1;
+    overflow: hidden;
 }
