--- a/src/frontend/components/suggestPortfolio.module.css
+++ b/src/frontend/components/suggestPortfolio.module.css
@@ -7,7 +7,7 @@
     margin-top: 20px;
 }
 
-.suggestedProjects { 
+.suggestedProjects {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,6 +18,8 @@
     border-radius: 5px;
     width: 300px;
     height: 300px;
+    gap: 300px; /* Add space between elements */
+    overflow: auto; /* Make it scrollable if content overflows */
 }
 
 .suggestion{
