--- a/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
@@ -18,6 +18,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
+  cursor: pointer; 
 }
 
 .upvotesContainer {
@@ -125,7 +126,7 @@
   gap: 20px;
   margin-bottom: 20px;
   min-height: 200px;
-  max-height: 400px;
+  max-height: 250px;
 }
 
 .descContainer {
@@ -173,7 +174,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   border-radius: 8px;
   padding: 10px;
   box-sizing: border-box;
