--- a/src/frontend/components/AddBlocPortfolio.module.css
+++ b/src/frontend/components/AddBlocPortfolio.module.css
@@ -435,3 +435,36 @@
   border-radius: 5px;
   cursor: pointer;
 }
+
+
+.spinner {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
+.autofillInput {
+  display: none;
+}
+
+.autofillLabel {
+  background-color: #3498db;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
