--- a/src/frontend/components/AddBlocPortfolio.module.css
+++ b/src/frontend/components/AddBlocPortfolio.module.css
@@ -448,16 +448,16 @@
 
 
 .spinner {
-  border: 16px solid #f3f3f3; /* Light grey */
+  border: 16px solid rgba(243, 243, 243, 0.2); /* Light grey, semi-transparent */
   border-top: 16px solid #3498db; /* Blue */
   border-radius: 50%;
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: fixed;
+  top: 52%;
   transform: translate(-50%, -50%);
+  backdrop-filter: blur(2px);
 }
 
 @keyframes spin {
@@ -472,20 +472,22 @@
 
 .autofillLabel {
   background-color: #3498db;
+  display: inline-flex; 
   color: white;
-  padding: 20px;
+  padding: 15px;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 20px;
   white-space: nowrap;
-  max-height: 20px;
+  max-height: 15px;
+  border: 2px solid #96d5ff;
+  align-items: center; 
+  gap: 20px; 
 }
 
 .autofillLabel:hover {
   background-color: #236895;
   color: white;
-  padding: 20px;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 16px;
 }
