--- a/src/frontend/components/userSearch.module.css
+++ b/src/frontend/components/userSearch.module.css
@@ -11,10 +11,12 @@
 }
 
 .title {
-  font-size: 2.5rem;
-  margin: 0.5rem 0 1.5rem;
+  font-size: 4rem;
+  margin: 0.5rem 0 1rem;
   color: #7faacb;
   text-align: left;
+  font-family: 'Jacquard 12';
+  letter-spacing: 10px;
 }
 
 .searchSection {
@@ -114,8 +116,8 @@
 
 .username {
   font-size: 1.5rem;
-  margin: 0;
-  color: #7faacb;
+  margin: 10px 0 0 0;
+  color: #bcbcbc;
   word-wrap: break-word;
   line-height: 1.2;
   max-width: 100%;
@@ -135,11 +137,14 @@
 }
 
 .userDetails {
-  margin-bottom: 1rem;
+  border-top: 2px solid #434343;
+  margin-bottom: .5rem;
+  margin-top: 10px; 
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   color: white; 
+  padding: 10px; 
 }
 
 .userDetails p {
@@ -155,6 +160,17 @@
   color: #7faacb;
   flex-shrink: 0;
   margin-top: 0.2rem;
+}
+
+.score{
+  color: #f0efef !important;
+  border-radius: 30px;
+  font-style: bolder !important;
+  font-size: 1.1rem !important;
+}
+
+.scoreIcon{
+  color: rgb(255, 106, 0) !important; 
 }
 
 .viewProfileButton {
