--- a/src/frontend/pages/SignUpPage/SignUp.module.css
+++ b/src/frontend/pages/SignUpPage/SignUp.module.css
@@ -329,3 +329,67 @@
 .autopopulateButton:hover {
   background-color: #0056b3;
 }
+
+.checkboxLabel {
+  display: flex;
+  align-items: center;
+  font-size: 0.9em;
+  margin-bottom: 15px;
+}
+
+.checkboxLabel input[type="checkbox"] {
+  margin-right: 10px;
+}
+
+.termsContent {
+  max-height: 400px;
+  overflow-y: auto;
+  padding: 20px;
+  font-size: 0.9em;
+  line-height: 1.5;
+}
+
+.modal {
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalContent {
+  background-color: #fefefe;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px;
+  max-height: 80vh;
+  overflow-y: auto;
+  border-radius: 5px;
+}
+
+.closeButton{
+  position: absolute;
+  top: 50px;
+  right: 400px;
+  background-color: #e26200;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tos{
+  margin-left: 10px;
+  color: rgb(76, 124, 248); 
+}
