--- a/src/frontend/pages/PublicPortfolioPage/publicProfile.module.css
+++ b/src/frontend/pages/PublicPortfolioPage/publicProfile.module.css
@@ -3,10 +3,9 @@
 /* publicProfile.module.css */
 
 .container {
-    background-color: #f9f9f9;
+    background-color: #252525;
     padding: 20px;
     border-radius: 8px;
-    max-width: 800px;
     margin: 0 auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
@@ -44,9 +43,7 @@
   }
   
   .portfolio {
-    background-color: #fff;
     border-radius: 8px;
-    padding: 15px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   }
   
