--- a/src/frontend/pages/LoginPage/passwordReset.module.css
+++ b/src/frontend/pages/LoginPage/passwordReset.module.css
@@ -39,13 +39,13 @@
     color: #333;
   }
   
-  h2 {
+  .h2 {
     margin-bottom: 20px;
     font-size: 24px;
     color: #333;
   }
   
-  input {
+  .input {
     width: 100%;
     padding: 10px;
     margin: 10px 0;
@@ -53,7 +53,7 @@
     border-radius: 4px;
   }
   
-  button {
+  .button {
     width: 100%;
     padding: 10px;
     margin-top: 10px;
@@ -65,7 +65,7 @@
     font-size: 16px;
   }
   
-  button:hover {
+  .button:hover {
     background-color: #0056b3;
   }
   
