--- a/src/frontend/pages/PublicPortfolioPage/publicProfile.module.css
+++ b/src/frontend/pages/PublicPortfolioPage/publicProfile.module.css
@@ -3,7 +3,7 @@
 /* publicProfile.module.css */
 
 .container {
-    background-color: #252525;
+    background-color: #1a1a1a;
     padding: 20px;
     border-radius: 8px;
     margin: 0 auto;
