--- a/src/frontend/pages/PublicPortfolioPage/publicSmallProjectEntry.module.css
+++ b/src/frontend/pages/PublicPortfolioPage/publicSmallProjectEntry.module.css
@@ -25,8 +25,8 @@
 
 .closeButton {
   position: absolute;
-  top: 28px;
-  left: 28px;
+  top: 30px;
+  right: 30px;
   background: none;
   color: white; 
   border: none;
@@ -41,16 +41,26 @@
   padding: 20px;
   border: 1px solid #4a4a4a;
   border-radius: 12px;
-  background-color: #323232;
+  background-color: #252525;
   color: #e0e0e0;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  border: 4px solid rgba(59, 137, 255, 0); 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
+  transition: border 0.3s ease;
   width: 94%; 
 }
 
 .projectContainer:hover {
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+  border: 4px solid rgba(59, 137, 255, 0.7); 
+  border-radius: 10px;
+  transition: border 0.3s ease;
 }
+
+.descAndPreviewContainer:hover{
+  cursor: pointer;
+}
+
 
 .headerContainer {
   display: flex;
@@ -139,7 +149,8 @@
   text-align: justify;
   text-justify: inter-word;
   margin-left: 20px;
-  margin-right: 20px;
+  margin-right: 40px;
+  font-family: 'Lato';
 }
 
 .description::after {
@@ -149,7 +160,7 @@
   left: 0;
   width: 100%;
   height: 50px;
-  background: linear-gradient(to bottom, rgba(50, 50, 50, 0), rgba(50, 50, 50, 1));
+  background: linear-gradient(to bottom, rgba(50, 50, 50, 0), rgb(38, 38, 38));
 }
 
 .previewContainer {
