--- a/src/frontend/pages/FeedPage/newFeedSidebar.module.css
+++ b/src/frontend/pages/FeedPage/newFeedSidebar.module.css
@@ -18,6 +18,7 @@
   }
   
   .sidebarItem {
+    margin-top: 20px;
     display: flex;
     align-items: center;
     padding: 12px 20px;
@@ -39,7 +40,7 @@
   
   .divider {
     height: 1px;
-    background-color: #3a3a3a;
+    border-top: 2px solid #3a3a3a;
     margin: 16px 0;
   }
   
@@ -59,9 +60,12 @@
   .searchContainer {
     display: flex;
     align-items: center;
-    padding: 8px 20px;
+    width: 85%; 
+    margin-left: 4px;
+    padding: 5px 20px;
     background-color: #2a2a2a;
-    margin-bottom: 16px;
+    margin-bottom: 5px;
+    border-radius: 40px; 
   }
   
   .searchContainer input {
@@ -79,7 +83,7 @@
   }
   
   .groupsList {
-    padding: 0 20px;
+    padding: 0 10px;
   }
   
   .groupSection {
