--- a/src/frontend/components/AddProjectComponent/addProject.module.css
+++ b/src/frontend/components/AddProjectComponent/addProject.module.css
@@ -557,27 +557,22 @@
     cursor: pointer;
   }
   
-  
-  .spinner {
-    border: 16px solid rgba(243, 243, 243, 0.2); /* Light grey, semi-transparent */
-    border-top: 16px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
+
+  .loaderOverlay {
     position: fixed;
-    top: 52%;
-    transform: translate(-50%, -50%);
-    backdrop-filter: blur(2px);
-    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(30, 30, 30, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 50000;
+    backdrop-filter: blur(5px);
   }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-  
-  
+
+
   .autofillInput {
     display: none;
   }
